did some work on this. sorry future anton if you want more steps in here, it's my fault

--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,6 @@ mypy = "==0.790"
 django-stubs = "==1.7.0"
 pytest = "==6.2.1"
 pytest-sugar = "==0.9.4"
-sphinx = "==3.4.1"
 sphinx-autobuild = "==2020.9.1"
 flake8 = "==3.8.4"
 flake8-isort = "==4.0.0"
@@ -37,6 +36,4 @@ django-coverage-plugin = "==1.8.0"
 pytest-django = "==4.1.0"
 Pillow = "==8.0.1"
 Django = "==3.0.11"
-
-[requires]
-python_version = "3.7"
+Sphinx = "==3.4.1"
