added ga_credentials.json to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+ga_credentials.json
+
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -269,5 +271,3 @@ tags
 fortyk_ffg_companion/media/
 
 .pytest_cache/
-
-
